--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
       <a href="creations/abyss-dragon-cape.png" download>
         <img src="creations/abyss-dragon-cape.png" alt="Abyss Dragon Cape">
       </a>
-      <p>🟣 Abyss Dragon Cape</p>
-    </div>
-
-    <div class="item">
-      <a href="creations/TechnoBlade.png" download>
-        <img src="creations/TechnoBlade.png" alt="Technoblade Face">
-      </a>
-      <p>🐷 Technoblade Face</p>
+      <p>🐉 Abyss Dragon Cape (256×128)</p>
     </div>
   </div>
 </body>
