--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
   <div class="gallery">
     <div class="item">
-      <a href="creations/abyss-dragon-cape.png" download>
-        <img src="creations/abyss-dragon-cape.png" alt="Abyss Dragon Cape">
+      <a href="creations/mace.png" download>
+        <img src="creations/mace.png" alt="Mace Cape">
       </a>
-      <p>🐉 Abyss Dragon Cape (256×128)</p>
+      <p>⚒️ Mace Cape</p>
     </div>
   </div>
 </body>
