--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>_Nyxqn Gallery</title>
+  <title>NyxqnMC Gallery</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <h1>_Nyxqn's Art & Creations</h1>
+  <h1>NyxqnMC's Art & Creations</h1>
   <p>Download and enjoy my latest creative work.</p>
 
   <div class="gallery">
@@ -14,6 +14,13 @@
         <img src="creations/mace.png" alt="Mace Cape">
       </a>
       <p>⚒️ Mace Cape</p>
+    </div>
+
+    <div class="item">
+      <a href="creations/night-wallpaper-with-shaders.png" download>
+        <img src="creations/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
+      </a>
+      <p>🌌 Night Wallpaper With Shaders</p>
     </div>
   </div>
 </body>
