--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <p>Download and enjoy my latest creative work.</p>
 
   <div class="gallery">
+    <!-- Mace Cape -->
     <div class="item">
       <a href="creations/mace.png" download>
         <img src="creations/mace.png" alt="Mace Cape">
@@ -16,9 +17,11 @@
       <p>⚒️ Mace Cape</p>
     </div>
 
-    <div class="item">
+    <!-- Night Wallpaper -->
+    <div class="item wallpaper">
       <a href="creations/night-wallpaper-with-shaders.png" download>
-        <img src="creations/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
+        <img src="creations/night-wallpaper-with-shaders.png" 
+             alt="Night Wallpaper With Shaders">
       </a>
       <p>🌌 Night Wallpaper With Shaders</p>
     </div>
