--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>NyxqnMC Gallery</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
@@ -10,8 +11,8 @@
 
   <!-- Tabs -->
   <div class="tabs">
-    <button class="tab-button active" onclick="showTab('capes')">🧥 Capes</button>
-    <button class="tab-button" onclick="showTab('wallpapers')">🌌 Wallpapers</button>
+    <button class="tab-button active" onclick="showTab('capes', this)">🧥 Capes</button>
+    <button class="tab-button" onclick="showTab('wallpapers', this)">🌌 Wallpapers</button>
   </div>
 
   <!-- Capes Gallery -->
@@ -35,15 +36,15 @@
   </div>
 
   <script>
-    function showTab(tabId) {
-      // Hide all tabs
+    function showTab(tabId, button) {
+      // Hide all galleries
       document.querySelectorAll('.tab-content').forEach(el => el.classList.add('hidden'));
-      // Remove "active" from all buttons
+      // Remove active from all buttons
       document.querySelectorAll('.tab-button').forEach(el => el.classList.remove('active'));
-      // Show the selected tab
+      // Show selected tab
       document.getElementById(tabId).classList.remove('hidden');
-      // Mark the clicked button active
-      event.target.classList.add('active');
+      // Mark clicked button active
+      button.classList.add('active');
     }
   </script>
 </body>
