--- a/index.html
+++ b/index.html
@@ -2,49 +2,138 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>NyxqnMC Gallery</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wallpapers & Capes</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: #0f0f10;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      height: 100vh;
+    }
+
+    .container {
+      width: 80%;
+      max-width: 900px;
+      margin-top: 40px;
+      background: #1a1a1d;
+      border-radius: 16px;
+      padding: 20px;
+      box-shadow: 0 4px 25px rgba(0,0,0,0.5);
+    }
+
+    .tabs {
+      display: flex;
+      gap: 10px;
+      border-bottom: 2px solid #2c2c2f;
+      margin-bottom: 20px;
+    }
+
+    .tab {
+      padding: 12px 20px;
+      cursor: pointer;
+      background: #2a2a2d;
+      border-radius: 10px 10px 0 0;
+      transition: background 0.3s;
+    }
+
+    .tab:hover {
+      background: #3a3a3d;
+    }
+
+    .tab.active {
+      background: #4c4cff;
+      font-weight: bold;
+    }
+
+    .tab-content {
+      display: none;
+      animation: fadeIn 0.4s ease;
+    }
+
+    .tab-content.active {
+      display: block;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+
+    .preview-box {
+      background: #101014;
+      border-radius: 12px;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .preview-box img {
+      max-width: 100%;
+      max-height: 400px;
+      border-radius: 12px;
+      margin-bottom: 15px;
+    }
+
+    input[type="file"] {
+      background: #4c4cff;
+      color: #fff;
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    input[type="file"]:hover {
+      background: #6a6aff;
+    }
+  </style>
 </head>
 <body>
-  <h1>NyxqnMC's Art & Creations</h1>
-  <p>Download and enjoy my latest creative work.</p>
-
-  <!-- Tabs -->
-  <div class="tabs">
-    <button class="tab-button active" onclick="showTab('capes', this)">🧥 Capes</button>
-    <button class="tab-button" onclick="showTab('wallpapers', this)">🌌 Wallpapers</button>
-  </div>
-
-  <!-- Capes Gallery -->
-  <div class="gallery tab-content" id="capes">
-    <div class="item">
-      <a href="creations/mace.png" download>
-        <img src="creations/mace.png" alt="Mace Cape">
-      </a>
-      <p>⚒️ Mace Cape</p>
+  <div class="container">
+    <div class="tabs">
+      <div class="tab active" onclick="openTab('wallpapers')">Wallpapers</div>
+      <div class="tab" onclick="openTab('capes')">Capes</div>
     </div>
-  </div>
 
-  <!-- Wallpapers Gallery -->
-  <div class="gallery tab-content hidden" id="wallpapers">
-    <div class="item wallpaper">
-      <a href="creations/night-wallpaper-with-shaders.png" download>
-        <img src="creations/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
-      </a>
-      <p>🌌 Night Wallpaper With Shaders</p>
+    <div id="wallpapers" class="tab-content active">
+      <div class="preview-box">
+        <img id="wallpaperPreview" src="night-wallpaper-with-shaders.png" alt="Wallpaper Preview">
+        <br>
+        <input type="file" accept="image/*" onchange="previewWallpaper(event)">
+      </div>
+    </div>
+
+    <div id="capes" class="tab-content">
+      <div class="preview-box">
+        <p>No cape selected yet.</p>
+        <input type="file" accept="image/*">
+      </div>
     </div>
   </div>
 
   <script>
-    function showTab(tabId, button) {
-      // Hide all galleries
-      document.querySelectorAll('.tab-content').forEach(el => el.classList.add('hidden'));
-      // Remove active from all buttons
-      document.querySelectorAll('.tab-button').forEach(el => el.classList.remove('active'));
-      // Show selected tab
-      document.getElementById(tabId).classList.remove('hidden');
-      // Mark clicked button active
-      button.classList.add('active');
+    function openTab(tabId) {
+      document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
+      document.querySelectorAll('.tab-content').forEach(content => content.classList.remove('active'));
+      document.getElementById(tabId).classList.add('active');
+      event.target.classList.add('active');
+    }
+
+    function previewWallpaper(event) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+          document.getElementById('wallpaperPreview').src = e.target.result;
+        }
+        reader.readAsDataURL(file);
+      }
     }
   </script>
 </body>
