--- a/index.html
+++ b/index.html
@@ -1,48 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NyxqnMC Gallery</title>
   <link rel="stylesheet" href="assets/style.css">
-  <script>
-    function showTab(tab) {
-      document.getElementById("capes").style.display = (tab === "capes") ? "flex" : "none";
-      document.getElementById("wallpapers").style.display = (tab === "wallpapers") ? "flex" : "none";
-      document.getElementById("tab-capes").classList.toggle("active", tab === "capes");
-      document.getElementById("tab-wallpapers").classList.toggle("active", tab === "wallpapers");
-    }
-    window.onload = () => showTab("capes");
-  </script>
 </head>
 <body>
-  <h1>NyxqnMC's Art & Creations</h1>
-  <p class="lead">Download and enjoy my latest creative work.</p>
-
-  <!-- Tabs -->
   <div class="tabs">
-    <button id="tab-capes" onclick="showTab('capes')">🧥 Capes</button>
-    <button id="tab-wallpapers" onclick="showTab('wallpapers')">🖼️ Wallpapers</button>
+    <button class="tab active" onclick="showTab('capes')">Capes</button>
+    <button class="tab" onclick="showTab('wallpapers')">Wallpapers</button>
   </div>
 
-  <!-- Capes Gallery -->
-  <div class="gallery" id="capes">
-    <div class="item">
+  <div id="capes" class="tab-content active">
+    <h2>Capes</h2>
+    <div class="gallery">
       <a href="creations/capes/mace.png" download>
-        <img class="thumb" src="creations/capes/mace.png" alt="Mace Cape" loading="lazy">
+        <img src="creations/capes/mace.png" alt="Mace Cape">
       </a>
-      <p class="label">⚒️ Mace Cape</p>
     </div>
   </div>
 
-  <!-- Wallpapers Gallery -->
-  <div class="gallery" id="wallpapers">
-    <div class="item">
+  <div id="wallpapers" class="tab-content">
+    <h2>Wallpapers</h2>
+    <div class="gallery">
       <a href="creations/wallpapers/night-wallpaper-with-shaders.png" download>
-        <img class="thumb" src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper" loading="lazy">
+        <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper">
       </a>
-      <p class="label">🌌 Night Wallpaper (Shaders)</p>
     </div>
   </div>
+
+  <script>
+    function showTab(tabId) {
+      document.querySelectorAll('.tab, .tab-content').forEach(el => {
+        el.classList.remove('active');
+      });
+      document.querySelector(`.tab[onclick="showTab('${tabId}')"]`).classList.add('active');
+      document.getElementById(tabId).classList.add('active');
+    }
+  </script>
 </body>
 </html>
