--- a/index.html
+++ b/index.html
@@ -7,36 +7,44 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <div class="tabs">
-    <button class="tab active" onclick="showTab('capes')">Capes</button>
-    <button class="tab" onclick="showTab('wallpapers')">Wallpapers</button>
-  </div>
-
-  <div id="capes" class="tab-content active">
-    <h2>Capes</h2>
-    <div class="gallery">
-      <a href="creations/capes/mace.png" download>
-        <img src="creations/capes/mace.png" alt="Mace Cape">
-      </a>
+  <header>
+    <h1>NyxqnMC Gallery</h1>
+    <div class="tabs">
+      <button class="tab-button active" onclick="showTab('capes')">Capes</button>
+      <button class="tab-button" onclick="showTab('wallpapers')">Wallpapers</button>
     </div>
-  </div>
+  </header>
 
-  <div id="wallpapers" class="tab-content">
-    <h2>Wallpapers</h2>
-    <div class="gallery">
-      <a href="creations/wallpapers/night-wallpaper-with-shaders.png" download>
-        <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper">
-      </a>
-    </div>
-  </div>
+  <main>
+    <section id="capes" class="tab-content active">
+      <h2>Capes</h2>
+      <div class="gallery">
+        <a href="creations/capes/mace.png" download>
+          <img src="creations/capes/mace.png" alt="Mace Cape">
+        </a>
+      </div>
+    </section>
+
+    <section id="wallpapers" class="tab-content">
+      <h2>Wallpapers</h2>
+      <div class="gallery">
+        <a href="creations/wallpapers/night-wallpaper-with-shaders.png" download>
+          <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper">
+        </a>
+      </div>
+    </section>
+  </main>
 
   <script>
     function showTab(tabId) {
-      document.querySelectorAll('.tab, .tab-content').forEach(el => {
-        el.classList.remove('active');
+      document.querySelectorAll('.tab-content').forEach(content => {
+        content.classList.remove('active');
       });
-      document.querySelector(`.tab[onclick="showTab('${tabId}')"]`).classList.add('active');
+      document.querySelectorAll('.tab-button').forEach(button => {
+        button.classList.remove('active');
+      });
       document.getElementById(tabId).classList.add('active');
+      event.target.classList.add('active');
     }
   </script>
 </body>
