--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <header>
+  <div class="container">
     <h1>NyxqnMC Gallery</h1>
-  </header>
 
-  <main>
-    <div class="gallery">
-      <div class="item">
-        <img src="wallpapers/night-wallpaper-with-shaders.png" alt="Wallpaper 1">
-        <a href="wallpapers/night-wallpaper-with-shaders.png" download>Download</a>
+    <section class="gallery">
+      <h2>Wallpapers</h2>
+      <div class="gallery-grid">
+        <img src="wallpapers/night-wallpaper-with-shaders.png" alt="Wallpaper">
       </div>
-      <div class="item">
-        <img src="capes/mace.png" alt="Cape 1">
-        <a href="capes/mace.png" download>Download</a>
+    </section>
+
+    <section class="gallery">
+      <h2>Capes</h2>
+      <div class="gallery-grid">
+        <img src="capes/mace.png" alt="Cape">
       </div>
-    </div>
-  </main>
+    </section>
+  </div>
 </body>
 </html>
