--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <section class="gallery">
       <h2>Wallpapers</h2>
       <div class="gallery-grid">
-        <img src="wallpapers/night-wallpaper-with-shaders.png" alt="Wallpaper">
+        <img src="wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
       </div>
     </section>
 
     <section class="gallery">
       <h2>Capes</h2>
       <div class="gallery-grid">
-        <img src="capes/mace.png" alt="Cape">
+        <img src="capes/mace.png" alt="Mace Cape">
       </div>
     </section>
   </div>
