--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NyxqnMC Gallery</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <title>Gallery</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>NyxqnMC Gallery</h1>
+    <h1>My Creations</h1>
 
-    <section class="gallery">
+    <div id="wallpapers" class="tab-content active">
       <h2>Wallpapers</h2>
-      <div class="gallery-grid">
-        <img src="wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
+      <div class="gallery">
+        <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Wallpaper 1">
       </div>
-    </section>
+    </div>
 
-    <section class="gallery">
+    <div id="capes" class="tab-content">
       <h2>Capes</h2>
-      <div class="gallery-grid">
-        <img src="capes/mace.png" alt="Mace Cape">
+      <div class="gallery">
+        <img src="creations/capes/mace.png" alt="Cape 1">
       </div>
-    </section>
+    </div>
   </div>
 </body>
 </html>
