--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div id="wallpapers" class="tab-content active">
       <h2>Wallpapers</h2>
       <div class="gallery">
-        <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Wallpaper 1">
+        <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
       </div>
     </div>
 
     <div id="capes" class="tab-content">
       <h2>Capes</h2>
       <div class="gallery">
-        <img src="creations/capes/mace.png" alt="Cape 1">
+        <img src="creations/capes/mace.png" alt="Mace Cape">
       </div>
     </div>
   </div>
