--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gallery</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Creations Gallery</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <div class="container">
     <h1>My Creations</h1>
 
-    <div id="wallpapers" class="tab-content active">
-      <h2>Wallpapers</h2>
-      <div class="gallery">
-        <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
-      </div>
+    <div class="gallery-section">
+        <h2>Wallpapers</h2>
+        <div class="gallery">
+            <div class="gallery-item">
+                <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
+                <p>Night Wallpaper With Shaders</p>
+            </div>
+        </div>
     </div>
 
-    <div id="capes" class="tab-content">
-      <h2>Capes</h2>
-      <div class="gallery">
-        <img src="creations/capes/mace.png" alt="Mace Cape">
-      </div>
+    <div class="gallery-section">
+        <h2>Capes</h2>
+        <div class="gallery">
+            <div class="gallery-item">
+                <img src="creations/capes/mace.png" alt="Mace Cape">
+                <p>Mace Cape</p>
+            </div>
+        </div>
     </div>
-  </div>
 </body>
 </html>
