--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h2>Wallpapers</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
+                <a href="creations/wallpapers/night-wallpaper-with-shaders.png" download="Night-Wallpaper-With-Shaders.png">
+                    <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
+                </a>
                 <p>Night Wallpaper With Shaders</p>
             </div>
         </div>
@@ -23,7 +25,9 @@
         <h2>Capes</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="creations/capes/mace.png" alt="Mace Cape">
+                <a href="creations/capes/mace.png" download="Mace-Cape.png">
+                    <img src="creations/capes/mace.png" alt="Mace Cape">
+                </a>
                 <p>Mace Cape</p>
             </div>
         </div>
