--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creations Gallery</title>
+    <title>Creations of NyxqnMC</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -13,10 +13,9 @@
         <h2>Wallpapers</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <a href="creations/wallpapers/night-wallpaper-with-shaders.png" download="Night-Wallpaper-With-Shaders.png">
-                    <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
-                </a>
+                <img src="creations/wallpapers/night-wallpaper-with-shaders.png" alt="Night Wallpaper With Shaders">
                 <p>Night Wallpaper With Shaders</p>
+                <a href="creations/wallpapers/night-wallpaper-with-shaders.png" download class="download-btn">Download</a>
             </div>
         </div>
     </div>
@@ -25,10 +24,9 @@
         <h2>Capes</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <a href="creations/capes/mace.png" download="Mace-Cape.png">
-                    <img src="creations/capes/mace.png" alt="Mace Cape">
-                </a>
+                <img src="creations/capes/mace.png" alt="Mace Cape">
                 <p>Mace Cape</p>
+                <a href="creations/capes/mace.png" download class="download-btn">Download</a>
             </div>
         </div>
     </div>
